# exacto

./: .gitignore  AUDIT.md  Cargo.toml  ISSUES.md  README.md  findings.md  progress.md  task_plan.md
benches/: bfv_bench.rs
reports/: paper_reproduction.md
src/: error.rs  lib.rs
src/bfv/: encoding.rs  encrypt.rs  eval.rs  keygen.rs  keyswitch.rs  mod.rs  modswitch.rs
src/bootstrap/: bfv_host.rs  coeffs_to_slots.rs  digit_extract.rs  mod.rs
src/dbfv/: advanced.rs  ciphertext.rs  decomposition.rs  decrypt.rs  encrypt.rs  eval.rs  keygen.rs  keyswitch.rs  lattice.rs  mod.rs  reduction.rs
src/params/: mod.rs  presets.rs  security.rs
src/ring/: mod.rs  modular.rs  ntt.rs  poly.rs  rns.rs
src/sampling/: gaussian.rs  mod.rs  uniform.rs
tests/: protocol_props.rs
