[package]
name = "exacto"
version = "0.1.0"
edition = "2021"
description = "dBFV high-precision fully homomorphic encryption library"

[dependencies]
concrete-ntt = "0.2"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
zeroize = "1.8"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serialize = ["serde"]

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "bfv_bench"
harness = false
